src/test/deca/context/valid/oracle/same_name_class_var.deca
class A{
    int A(int A){
        return A;
    }
}