src/test/deca/context/invalid/with-object/wrong_type_return.deca
class A{
    int f(){
        return 1.0;
    }
}